Контейнеризация проекта